fixed some scrollbar stuff for safari

--- a/src/Pages/Technology/ProjectDirectory/ProjectList.css
+++ b/src/Pages/Technology/ProjectDirectory/ProjectList.css
@@ -15,6 +15,10 @@
     border:dashed 1px var(--tertiary);
 }
 
+.project-list::-webkit-scrollbar {
+    display: none; /* Hide scrollbar */
+}
+
 @media only screen and (max-width: 768px) {
     body {
         height: fit-content;
